WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148602
NodeFilter.SHOW_ALL has wrong value on 32-bit
https://bugs.webkit.org/show_bug.cgi?id=148602
Summary
NodeFilter.SHOW_ALL has wrong value on 32-bit
Chris Dumez
Reported
2015-08-28 19:20:02 PDT
NodeFilter.SHOW_ALL has wrong value on 32-bit. This is because NodeFilter.SHOW_ALL is an unsigned long whose value is 0xFFFFFFFF but our bindings code is casting it to an intptr_t type which is not wide enough on 32-bit.
Attachments
Patch
(9.59 KB, patch)
2015-08-28 19:54 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(9.59 KB, patch)
2015-08-29 18:08 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(11.30 KB, patch)
2015-08-31 10:54 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-08-28 19:26:16 PDT
Causes the following test to fail on our Windows bots: fast/dom/node-filter-interface.html
Chris Dumez
Comment 2
2015-08-28 19:54:49 PDT
Created
attachment 260205
[details]
Patch
Chris Dumez
Comment 3
2015-08-28 19:55:25 PDT
Let's see if MSVC is willing to build this...
Chris Dumez
Comment 4
2015-08-28 20:19:32 PDT
(In reply to
comment #3
)
> Let's see if MSVC is willing to build this...
Arg. the win EWS seems to be in a bad state: C:\cygwin\home\buildbot\WebKit\Source\WebCore\platform\sql\SQLiteDatabase.h(31): fatal error C1083: Cannot open include file: 'sqlite3.h': No such file or directory (compiling source file ..\Modules\webdatabase\Database.cpp) [C:\cygwin\home\buildbot\WebKit\Source\WebCore\WebCore.vcxproj\WebCore.vcxproj] DatabaseManager.cpp
Chris Dumez
Comment 5
2015-08-29 18:08:03 PDT
Created
attachment 260230
[details]
Patch
Chris Dumez
Comment 6
2015-08-31 09:08:42 PDT
This bug also causes the following new tests to fail on Windows: http/tests/w3c/dom/interfaces.html http/tests/w3c/dom/traversal/NodeFilter-constants.html
Chris Dumez
Comment 7
2015-08-31 10:54:12 PDT
Created
attachment 260295
[details]
Patch
Chris Dumez
Comment 8
2015-08-31 12:50:44 PDT
Comment on
attachment 260295
[details]
Patch Brent tells me it is building.
Brent Fulgham
Comment 9
2015-08-31 12:59:46 PDT
(In reply to
comment #8
)
> Comment on
attachment 260295
[details]
> Patch > > Brent tells me it is building.
Yes -- it's true!
Geoffrey Garen
Comment 10
2015-08-31 13:12:13 PDT
Comment on
attachment 260295
[details]
Patch constexpr constructor, nice
WebKit Commit Bot
Comment 11
2015-08-31 14:05:48 PDT
Comment on
attachment 260295
[details]
Patch Clearing flags on attachment: 260295 Committed
r189184
: <
http://trac.webkit.org/changeset/189184
>
WebKit Commit Bot
Comment 12
2015-08-31 14:05:54 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 13
2015-09-02 13:32:16 PDT
rdar://problem/22544610
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug